test/functions/intents/out/ambiguous-out-intent2.good
ambiguous-out-intent2.chpl:9: In function 'main':
ambiguous-out-intent2.chpl:11: error: ambiguous call 'f(int(64))'
ambiguous-out-intent2.chpl:1: note: candidates are: f(out arg: int)
ambiguous-out-intent2.chpl:5: note:                 f(out arg: real)
ambiguous-out-intent2.chpl:11: note: out intent formals do not participate in overload resolution
